@@ -73,23 +73,6 @@ extern void lto_elf_end_section (void);
 extern lto_file *lto_set_current_out_file (lto_file *file);
 extern lto_file *lto_get_current_out_file (void);
 
-/* lto-symtab.c */
-
-/* The NEW_VAR (a VAR_DECL) has just been read.  If there is an
-   existing variable with the same name, merge the declaration for
-   NEW_VAR with the previous declaration and return the previous
-   declaration.  In this case, NEW_VAR must no longer be used by the
-   caller.  All other entities referenced from NEW_VAR (including, in
-   particular, its type) must already have been merged before this
-   function is called.  If the merge fails (due to inconsistencies
-   between the declarations), an error message is issued, and
-   error_mark_node is returned.  If there is no previous declaration,
-   NEW_VAR is returned.  */
-extern tree lto_symtab_merge_var (tree new_var);
-
-/* Like lto_symtab_merge_var, but for functions.  */
-extern tree lto_symtab_merge_fn (tree new_fn);
-
 /* Hash table entry to hold the start offset and length of an lto
    section in a .o file.  */
 
